# Playgrounds-Demo

./: CLAUDE.md  DEPENDENCY_INJECTION.md  Dockerfile  Playgrounds Demo.py  Playgrounds-Demo.py  compose.yaml  justfile  pyproject.toml  zip.py
__marimo__/session/: Playgrounds Demo.py.json  Playgrounds-Demo.py.json
prompts/: instructions.xml
