[project]
name = "playgrounds-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "docker>=7.1.0",
    "evaluate>=0.4.6",
    "icicle-playgrounds>=0.1.5.6",
    "ipython>=9.5.0",
    "marimo>=0.14.16",
    "patra-toolkit>=0.2.0",
    "playgrounds-agent",
    "polars>=1.34.0",
    "pydantic-ai>=1.0.17",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]>=4.55.0",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
playgrounds-agent = { path = "lib/playgrounds_agent-0.1.0-py3-none-any.whl" }
