[project]
name = "playgrounds-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.5.0",
    "marimo>=0.14.16",
    "patra-toolkit>=0.2.0",
    "playgrounds-agent",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "watchdog>=6.0.0",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool.uv.sources]
playgrounds-agent = { path = "lib/playgrounds_agent-0.1.0-py3-none-any.whl" }
